Fixed many CSS issues, notiably scaling on small screens caused by footer colliding with screen edge. Used css Media to change style on smaller screens. Added Google sign in with SupaBase, using Google provider. Prepared Navbar for adding react-countdown-circle-timer package

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -22,3 +22,9 @@
 	flex-direction: row;
 	gap: 30px;
 }
+
+@media screen and (max-width: 590px) {
+	.footerText {
+		flex-direction: column;
+	}
+}
