--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -3,12 +3,12 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 18px 30px 5px 50px;
+	padding: 10px 30px 10px 30px;
 	height: 50px;
 	background: #192734;
 	color: #ffffff;
 	box-shadow: black 0px 1px 3px;
-	width: 97.9%;
+	/* width: 97.9%; */
 }
 .loggedInUser {
 	list-style: none;
@@ -35,8 +35,15 @@
 	background-color: #1da1f2;
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 590px) {
 	.navbar {
 		height: 60px;
+		width: 100%;
+		font-size: 12px;
+		padding: 5px;
+	}
+	.signOut {
+		font-size: 16px;
+		padding: 5px 10px 5px 10px;
 	}
 }
