--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,10 @@
 
 * {
 	font-family: "Nunito";
+	margin: 0;
+	padding: 0;
 }
 
-nav {
-	margin: -20px;
-	margin-bottom: 0px;
-}
 .addButton {
 	padding: 10px;
 	margin-left: 30px;
